--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "apexcharts": "^3.26.1",
     "bignumber.js": "^9.0.1",
     "ethers": "^5.1.0",
+    "extract-mdx-metadata": "^2.0.0",
     "framer-motion": "^4.1.4",
+    "fs-extra": "^10.1.0",
     "lodash": "^4.17.21",
     "next": "10.1.3",
     "next-images": "^1.7.0",
