--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@geist-ui/core": "^2.3.8",
+    "@geist-ui/icons": "^1.0.2",
     "@geist-ui/react": "^2.1.5",
     "@geist-ui/react-icons": "^1.0.1",
+    "@mdx-js/react": "^2.1.1",
     "apexcharts": "^3.26.1",
     "bignumber.js": "^9.0.1",
     "ethers": "^5.1.0",
