--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-apexcharts": "^1.3.9",
     "react-circle-flags": "^0.0.14",
     "react-dom": "17.0.2",
+    "react-feather": "^2.0.10",
     "react-jss": "^10.6.0",
     "react-tooltip": "^4.2.17",
     "styled-components": "^5.2.3",
