rm gtm from tsconfig and adding tsnode types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
     "downlevelIteration": true,
     "baseUrl": "."
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/gtm.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
