--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.168",
+    "@types/node": "^17.0.38",
     "@types/react": "^17.0.3",
     "@types/styled-components": "^5.1.9",
     "babel-plugin-styled-components": "^1.12.0",
